--- a/AutoStockCar/src/main/java/com/mycompany/autostockcar/view/formulario/Dashboard.form
+++ b/AutoStockCar/src/main/java/com/mycompany/autostockcar/view/formulario/Dashboard.form
@@ -52,7 +52,7 @@
         <Container class="javax.swing.JPanel" name="jPanel1">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="cd" green="bf" red="83" type="rgb"/>
+              <Color blue="cc" green="cc" red="cc" type="rgb"/>
             </Property>
             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
               <Dimension value="[0, 0]"/>
